--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=Tienda
 
-##Nos corra el servidor web en el puerto 80
+#Nos corra el servidor web en el puerto 80
 server.port=80 
+
+#Para definir el formato de los logs se utiliza la siguiente linea
+logging.pattern.dateformat=hh:mm
+
+#Para eliminar el mensaje invasivo de spring
+spring.main.banner-mode=off
