--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,17 @@ logging.pattern.dateformat=hh:mm
 
 #Para eliminar el mensaje invasivo de spring
 spring.main.banner-mode=off
+
+#MySQL Conexion
+
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#mostrar información en el log 
+
+spring.jpa.properties.hibernate.format_sql=true 
+logging.level.org.hibernate.SQL=DEBUG 
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
